ISIS-3073: polishing Metamodel Terminology (2)

--- a/antora/components/docs/modules/resources/pages/metamodel_terminology.adoc
+++ b/antora/components/docs/modules/resources/pages/metamodel_terminology.adoc
@@ -49,7 +49,7 @@ DO -> ME : can \n act \n as
 
 SPRING ..> S : manages
 DS "is a"-u-> S
-DS --> A : contributes\n an\n
+DS --> A : contributes\n 1..*\n
 @enduml
 --
 
