--- a/antora/components/refguide-index/modules/applib/pages/index/services/wrapper/WrappingObject.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/wrapper/WrappingObject.adoc
@@ -28,7 +28,7 @@ Provide access to the underlying, wrapped object.
 <.> xref:#__isis_executionModes__[__isis_executionModes()]
 +
 --
-The _EnumSetexecution modes_ inferred from the xref:refguide:applib:index/services/wrapper/control/SyncControl.adoc[SyncControl] with which this wrapper was _WrapperFactory#wrap(Object, SyncControl) created_ .
+The xref:refguide:applib:index/services/wrapper/control/ExecutionMode.adoc[ExecutionMode] (s) inferred from the xref:refguide:applib:index/services/wrapper/control/SyncControl.adoc[SyncControl] with which this wrapper was _WrapperFactory#wrap(Object, SyncControl) created_ .
 --
 
 == Members
@@ -54,4 +54,4 @@ NOTE: domain classes may not have a method with this name. The `__isis_` prefix 
 [#__isis_executionModes__]
 === __isis_executionModes()
 
-The _EnumSetexecution modes_ inferred from the xref:refguide:applib:index/services/wrapper/control/SyncControl.adoc[SyncControl] with which this wrapper was _WrapperFactory#wrap(Object, SyncControl) created_ .
+The xref:refguide:applib:index/services/wrapper/control/ExecutionMode.adoc[ExecutionMode] (s) inferred from the xref:refguide:applib:index/services/wrapper/control/SyncControl.adoc[SyncControl] with which this wrapper was _WrapperFactory#wrap(Object, SyncControl) created_ .
