--- a/antora/components/refguide-index/modules/extensions/pages/index/secman/applib/permission/dom/ApplicationPermissionMode.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/secman/applib/permission/dom/ApplicationPermissionMode.adoc
@@ -40,8 +40,8 @@ The xref:refguide:extensions:index/secman/applib/permission/dom/ApplicationPermi
 
 Whether can user/role can change (or is prevented from changing) the state of the system using the application feature (class member).
 
-In other words, whether they can execute (if an action, modify/clear (if a property), addTo/removeFrom (if a collection).
+In other words, whether they can execute (if an action, modify/clear (if a property), [addTo/removeFrom (if a collection) ... see note below].
 
 The xref:refguide:extensions:index/secman/applib/permission/dom/ApplicationPermissionRule.adoc[ApplicationPermissionRule] of the xref:refguide:extensions:index/secman/applib/permission/dom/ApplicationPermission.adoc[ApplicationPermission] indicates whether access is being granted or denied.
 
-Note that the Wicket viewer does not at the time of writing (Isis 1.6.0) support the notion of mutable collections. The RO viewer does, however.
+Note: as of ISIS-3084 the notion of mutable collections was removed
