--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/Action/associateWith/ActionAssociateWithVm-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/Action/associateWith/ActionAssociateWithVm-description.adoc
@@ -11,11 +11,10 @@ This can of course be overridden using `@ActionLayout` or the layout file
 However, it is also used at a deeper level, because the action may have a collection parameter which is the same type as the collection elements.
 In the Wicket viewer, the collection is rendered with checkboxes; those selected objects are used as defaults for the action collection parameter.
 
+++++
+include::overview.svg[]
+++++
 ////
-!!!requires kroki integration, which we don't have yet for the demo
-[plantuml,ActionChoicesFrom,svg]
-----
-@startuml(id=ActionChoicesFrom)
 caption Demo Classes
 
 class "ActionAssociateWithVm" as PARENT
@@ -33,8 +32,6 @@ CHILD : String value
 
 PARENT --> CHILD : "children\n(0..n)"
 PARENT --> CHILD : "favorites\n(0..n)"
-@enduml
-----
 ////
 
 == Associated with Properties
