--- a/antora/components/refguide/modules/applib-svc/partials/_presentation-layer-spi.adoc
+++ b/antora/components/refguide/modules/applib-svc/partials/_presentation-layer-spi.adoc
@@ -19,6 +19,11 @@ The persistence layer SPIs influence how the framework persists domain objects, 
 |(Attempt to) map the returned data into the representation required by the client's HTTP `Accept` header.
 
 The framework will call all available implementations until a mapping is made (chain of responsibility pattern).
+The framework itself provides a couple of implementations:
+
+* xref:refguide:applib:index/services/commanddto/conmap/ContentMappingServiceForCommandDto.adoc[ContentMappingServiceForCommandDto]
+* xref:refguide:applib:index/services/commanddto/conmap/ContentMappingServiceForCommandsDto.adoc[ContentMappingServiceForCommandsDto]
+
 
 
 |xref:refguide:applib:index/services/userreg/EmailNotificationService.adoc[EmailNotificationService]
@@ -32,9 +37,11 @@ The framework will call all available implementations until a mapping is made (c
 |xref:refguide:applib:index/services/exceprecog/ExceptionRecognizerService.adoc[ExceptionRecognizerService]
 |Convert certain exceptions (eg foreign or unique key violation in the database) into a format that can be rendered to the end-user.
 
+All available implementations are called (chain of responsibility pattern).
 
 
-|xref:refguide:applib:index/services/hint/HintStore.adoc[HintIdProvider]
+
+|xref:refguide:applib:index/services/hint/HintIdProvider.adoc[HintIdProvider]
 |Provide a "logical" identity for view models such that UI hints can be stored for them.
 
 
