--- a/antora/components/refguide/modules/applib-svc/partials/_application-layer-spi.adoc
+++ b/antora/components/refguide/modules/applib-svc/partials/_application-layer-spi.adoc
@@ -20,14 +20,6 @@ Domain service SPIs influence how the framework handles application layer concer
 Several implementations are provided by default for most of the common representations of a user principal.
 This SPI does though provide additional flexibility for other security technologies that may be supported by link:https://spring.io/projects/spring-security[Spring].
 
-|xref:refguide:applib:index/services/publishing/spi/CommandSubscriber.adoc[CommandSubscriber]
-|SPI service to listen on command instances, ie representations of an action invocation or property edit.
-Used for command/auditing and background services.
-
-|xref:refguide:applib:index/services/publishing/spi/ExecutionSubscriber.adoc[ExecutionSubscriber]
-|SPI service to listen on command instances, ie representations of an action invocation or property edit.
-Used for command/auditing and background services.
-
 
 
 |xref:refguide:applib:index/services/health/HealthCheckService.adoc[HealthCheckService]
@@ -46,6 +38,11 @@ Used for command/auditing and background services.
 |xref:refguide:applib:index/services/user/ImpersonatedUserHolder.adoc[ImpersonatedUserHolder]
 |Provides a mechanism to hold the impersonated user
 
+
+|xref:refguide:applib:index/services/session/SessionSubscriber.adoc[SessionSubscriber]
+|SPI service to listen on users logging in and logging off their (long-lived) session.
+
+The xref:refguide:applib:index/services/session/SessionLogger.adoc[SessionLogger] is a trivial implementation that just logs the session start/end times.
 
 
 
