--- a/antora/components/refguide/modules/applib-svc/partials/_integration-spi.adoc
+++ b/antora/components/refguide/modules/applib-svc/partials/_integration-spi.adoc
@@ -18,28 +18,38 @@ The integration SPIs allow the framework to automate the exchange of data betwee
 |SPI to support representation of commands as XML over REST, in particular to support master/slave replay of commands.
 
 
-|xref:refguide:applib:index/services/command/CommandExecutorService.adoc[CommandExecutorService]
-|Service used to execute commands.
-One use case isin support of async commands (using xref:refguide:applib:index/services/wrapper/WrapperFactory.adoc[WrapperFactory] ).
-
-// commandreplay moved to incubator for the time being
-//Another is to replay commands from a primary onto a secondary (see xref:userguide:commandreplay:about.adoc[Command Replay] ; another is
 
 
 |xref:refguide:applib:index/services/publishing/spi/CommandSubscriber.adoc[CommandSubscriber]
-|SPI to allow commands to be processed on completion.
-The xref:userguide:commandlog:about.adoc[Command Log] extension implements the SPI in order to persists commands for audit or replay.
+|SPI service to listen on command instances, ie representations of an action invocation or property edit.
+Used for command/auditing and background services.
 
+The framework provides a couple of implementations:
+
+* The xref:refguide:applib:index/services/publishing/log/CommandLogger.adoc[CommandLogger] is a trivial implementation that just logs the commands.
+* The xref:userguide:commandlog:about.adoc[Command Log] extension is a more complete implementation that persists representation of the commands to a relational database.
 
 |xref:refguide:applib:index/services/publishing/spi/EntityChangesSubscriber.adoc[EntityChangesSubscriber]
 |Summarises changes made to entities within an interaction.
 
+The xref:refguide:applib:index/services/publishing/log/EntityChangesLogger.adoc[EntityChangesLogger] is a trivial implementation that just logs the commands.
+
+
 |xref:refguide:applib:index/services/publishing/spi/EntityPropertyChangeSubscriber.adoc[EntityPropertyChangeSubscriber]
 |Publish the changes to all changed properties of all domain object within an interaction.
 
+The xref:refguide:applib:index/services/publishing/log/EntityPropertyChangeLogger.adoc[EntityPropertyChangeLogger] is a trivial implementation that just logs the commands.
+
+
 
 |xref:refguide:applib:index/services/publishing/spi/ExecutionSubscriber.adoc[ExecutionSubscriber]
-|Publish any action invocations/property edits and changed objects, typically for interchange with an external system in a different bounded context.
+|SPI service to listen on command executions, ie representations of an action invocation or property edit.
+
+The framework provides several implementations:
+
+* The xref:refguide:applib:index/services/publishing/log/ExecutionLogger.adoc[ExecutionLogger] is a trivial implementation that just logs the commands.
+* The xref:userguide:executionlog:about.adoc[Execution Log] is a more complete implete implementation that persists an representation of the execution to a relational database.
+* The xref:userguide:executionoutbox:about.adoc[Execution Outbox] also implements this SPI, providing an implementation of the "outbox pattern" to allow the publishing of execution events with external "downstream" systems.
 
 
 
