--- a/antora/components/refguide/modules/applib-svc/partials/module-nav.adoc
+++ b/antora/components/refguide/modules/applib-svc/partials/module-nav.adoc
@@ -2,6 +2,7 @@
 * xref:refguide:applib-svc:about.adoc[Domain Services]
 
 ** xref:refguide:applib:index/services/acceptheader/AcceptHeaderService.adoc[AcceptHeaderService]
+** xref:refguide:applib:index/services/appfeatui/ApplicationFeatureMenu.adoc[ApplicationFeatureMenu]
 ** xref:refguide:applib:index/services/appfeat/ApplicationFeatureRepository.adoc[ApplicationFeatureRepository]
 ** xref:refguide:applib:index/services/bookmark/BookmarkService.adoc[BookmarkService]
 ** xref:refguide:applib:index/services/bookmarkui/BookmarkUiService.adoc[BookmarkUiService]
@@ -9,14 +10,21 @@
 ** xref:refguide:applib:index/services/commanddto/processor/spi/CommandDtoProcessorService.adoc[CommandDtoProcessorService]
 ** xref:refguide:applib:index/services/command/CommandExecutorService.adoc[CommandExecutorService]
 ** xref:refguide:applib:index/services/publishing/spi/CommandSubscriber.adoc[CommandSubscriber]
+*** xref:refguide:applib:index/services/publishing/log/CommandLogger.adoc[CommandLogger]
 ** xref:refguide:applib:index/services/confview/ConfigurationMenu.adoc[ConfigurationMenu]
 ** xref:refguide:applib:index/services/confview/ConfigurationViewService.adoc[ConfigurationViewService]
 ** xref:refguide:applib:index/services/conmap/ContentMappingService.adoc[ContentMappingService]
+*** xref:refguide:applib:index/services/commanddto/conmap/ContentMappingServiceForCommandDto.adoc[ContentMappingServiceForCommandDto]
+*** xref:refguide:applib:index/services/commanddto/conmap/ContentMappingServiceForCommandsDto.adoc[ContentMappingServiceForCommandsDto]
 ** xref:refguide:applib:index/services/linking/DeepLinkService.adoc[DeepLinkService]
 ** xref:refguide:applib:index/services/userreg/EmailNotificationService.adoc[EmailNotificationService]
 ** xref:refguide:applib:index/services/email/EmailService.adoc[EmailService]
 ** xref:refguide:applib:index/services/publishing/spi/EntityChangesSubscriber.adoc[EntityChangesSubscriber]
+*** xref:refguide:applib:index/services/publishing/log/EntityChangesLogger.adoc[EntityChangesLogger]
 ** xref:refguide:applib:index/services/publishing/spi/EntityPropertyChangeSubscriber.adoc[EntityPropertyChangeSubscriber]
+*** xref:refguide:applib:index/services/publishing/log/EntityPropertyChangeLogger.adoc[EntityPropertyChangeLogger]
+** xref:refguide:applib:index/services/publishing/spi/ExecutionSubscriber.adoc[ExecutionSubscriber]
+*** xref:refguide:applib:index/services/publishing/log/ExecutionLogger.adoc[ExecutionLogger]
 ** xref:refguide:applib:index/services/error/ErrorReportingService.adoc[ErrorReportingService]
 ** xref:refguide:applib:index/services/eventbus/EventBusService.adoc[EventBusService]
 ** xref:refguide:applib:index/services/exceprecog/ExceptionRecognizerService.adoc[ExceptionRecognizerService]
@@ -25,6 +33,7 @@
 ** xref:refguide:applib:index/services/grid/GridService.adoc[GridService]
 ** xref:refguide:applib:index/services/grid/GridSystemService.adoc[GridSystemService]
 ** xref:refguide:applib:index/services/health/HealthCheckService.adoc[HealthCheckService]
+** xref:refguide:applib:index/services/hint/HintIdProvider.adoc[HintIdProvider]
 ** xref:refguide:applib:index/services/hint/HintStore.adoc[HintStore]
 ** xref:refguide:applib:index/services/homepage/HomePageResolverService.adoc[HomePageResolverService]
 ** xref:refguide:applib:index/services/bookmark/IdStringifier.adoc[IdStringifier]
@@ -32,34 +41,39 @@
 ** xref:refguide:applib:index/services/user/ImpersonateMenuAdvisor.adoc[ImpersonateMenuAdvisor]
 ** xref:refguide:applib:index/services/user/ImpersonatedUserHolder.adoc[ImpersonatedUserHolder]
 ** xref:refguide:applib:index/services/iactn/InteractionProvider.adoc[InteractionProvider]
+** xref:refguide:applib:index/services/iactnlayer/InteractionLayerTracker.adoc[InteractionLayerTracker]
 ** xref:refguide:applib:index/services/iactnlayer/InteractionService.adoc[InteractionService]
 ** xref:refguide:applib:index/services/jaxb/JaxbService.adoc[JaxbService]
 ** xref:refguide:applib:index/services/layout/LayoutService.adoc[LayoutService]
 ** xref:refguide:applib:index/services/layout/LayoutServiceMenu.adoc[LayoutServiceMenu]
 ** xref:refguide:applib:index/services/i18n/LanguageProvider.adoc[LanguageProvider]
+** xref:refguide:applib:index/services/locale/LocaleChoiceProvider.adoc[LocaleChoiceProvider]
 ** xref:refguide:applib:index/services/menu/MenuBarsLoaderService.adoc[MenuBarsLoaderService]
 ** xref:refguide:applib:index/services/menu/MenuBarsService.adoc[MenuBarsService]
 ** xref:refguide:applib:index/services/message/MessageService.adoc[MessageService]
-** xref:refguide:applib:index/services/metamodel/MetaModelService.adoc[MetamodelService]
-** xref:refguide:applib:index/services/metamodel/MetaModelServiceMenu.adoc[MetamodelServiceMenu]
+** xref:refguide:applib:index/services/metamodel/MetaModelService.adoc[MetaModelService]
+** xref:refguide:applib:index/services/metamodel/MetaModelServiceMenu.adoc[MetaModelServiceMenu]
 ** xref:refguide:applib:index/services/metrics/MetricsService.adoc[MetricsService]
-** xref:refguide:applib:index/services/publishing/spi/ExecutionSubscriber.adoc[ExecutionSubscriber]
 ** xref:refguide:applib:index/services/queryresultscache/QueryResultsCache.adoc[QueryResultsCache]
 ** xref:refguide:applib:index/services/repository/RepositoryService.adoc[RepositoryService]
 ** xref:refguide:applib:index/services/routing/RoutingService.adoc[RoutingService]
 ** xref:refguide:applib:index/services/scratchpad/Scratchpad.adoc[Scratchpad]
 ** xref:refguide:applib:index/services/inject/ServiceInjector.adoc[ServiceInjector]
 ** xref:refguide:applib:index/services/registry/ServiceRegistry.adoc[ServiceRegistry]
-** xref:refguide:applib:index/services/session/SessionLogService.adoc[SessionLogService]
+** xref:refguide:applib:index/services/session/SessionSubscriber.adoc[SessionSubscriber]
+** xref:refguide:applib:index/services/sitemap/SitemapService.adoc[SitemapService]
+** xref:refguide:applib:index/services/sitemap/SitemapServiceMenu.adoc[SitemapServiceMenu]
 ** xref:refguide:applib:index/services/sudo/SudoService.adoc[SudoService]
 ** xref:refguide:applib:index/services/swagger/SwaggerService.adoc[SwaggerService]
 ** xref:refguide:applib:index/services/tablecol/TableColumnOrderService.adoc[TableColumnOrderService]
+** xref:refguide:applib:index/services/tablecol/TableColumnVisibilityService.adoc[TableColumnVisibilityService]
 ** xref:refguide:applib:index/services/title/TitleService.adoc[TitleService]
 ** xref:refguide:applib:index/services/i18n/TranslationService.adoc[TranslationService]
 ** xref:refguide:applib:index/services/i18n/TranslationsResolver.adoc[TranslationsResolver]
 ** xref:refguide:applib:index/services/xactn/TransactionalProcessor.adoc[TransactionProcessor]
 ** xref:refguide:applib:index/services/xactn/TransactionService.adoc[TransactionService]
 ** xref:refguide:applib:index/services/urlencoding/UrlEncodingService.adoc[UrlEncodingService]
+** xref:refguide:applib:index/services/userui/UserMenu.adoc[UserMenu]
 ** xref:refguide:applib:index/services/userreg/UserRegistrationService.adoc[UserRegistrationService]
 ** xref:refguide:applib:index/services/user/UserService.adoc[UserService]
 ** xref:refguide:applib:index/services/wrapper/WrapperFactory.adoc[WrapperFactory]
